--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="img/favicon_2.ico">
     <title>My CV Site</title>
 </head>
 
