--- a/index.html
+++ b/index.html
@@ -5,12 +5,61 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/favicon_2.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Lato:wght@300&display=swap" rel="stylesheet">
     <title>My CV Site</title>
 </head>
 
 <body>
+    <img class="top-cloud" src="img/cloud.png" alt="cloud-img">
+    <div class="name">
+        <h1 class="name-profile">I'm Denis.</h1>
+        <h3>a web developer.</h3>
+        <img class="bottom-cloud" src="img/cloud.png" alt="cloud-img">
+        <img src="img/mountain.png" alt="mountain-img">
+    </div>
 
-    <h1>placeholder</h1>
+    <div class="middle-container">
+        <div class="profile">
+            <img class="profile-home" src="img/daft1.jpg" alt="">
+            <h2>Hello.</h2>
+            <p>I develop websites. I also compose music.
+            </p>
+        </div>
+        <hr class="break-home">
+        <div class="skills">
+            <h2>My Skills</h2>
+            <div class="skills-home">
+                <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/922/922699.png" alt="">
+                <h3>Design & Development</h3>
+                <p class="home-margin-bottom">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer
+                    vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            </div>
+            <div class="skills-home">
+                <img class="skills-img-2" src="https://cdn-icons-png.flaticon.com/512/2735/2735488.png" alt="">
+                <h3>Composition</h3>
+                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
+                    interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            </div>
+        </div>
+        <hr class="break-home">
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Website or music? Let's talk.</h3>
+            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn contact-me" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
+    </div>
+
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p class="footer-copyright">© Denis Chernyavsky</p>
+    </div>
+
 
 </body>
 
